Experimenting fixes for Props table scrolling bug on mobile devices.

--- a/src/styles/Badges.css
+++ b/src/styles/Badges.css
@@ -26,8 +26,9 @@
     width: 85vw;
     margin-bottom: 2em;
     overflow-x: scroll;
-    max-height: 100vh;
-    overflow-y: hidden;
+    overflow-y: visible;
+    min-height: 100%;
+    height: 100%;
 }
 
 .props-container > * {
